syntax = "proto3";

package com.hepo.dfs.namenode.rpc;

option java_multiple_files = true;
option java_package = "com.hepo.dfs.namenode.rpc.service";
option java_outer_classname = "NameNodeServer";

import "NameNodeRpcModel.proto";

service NameNodeService {  
	rpc register(RegisterRequest) returns (RegisterResponse);
	rpc heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
	rpc mkdir(MkdirRequest) returns (MkdirResponse);
	rpc shutdown(ShutdownRequest) returns (ShutdownResponse);
	rpc fetchEditsLog(FetchEditsLogRequest) returns (FetchEditsLogResponse);
	rpc updateCheckpointTxid (UpdateCheckpointTxidRequest) returns (UpdateCheckpointTxidResponse);
	rpc create (CreateFileRequest) returns (CreateFileResponse);
}  